# education_time_management

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
app/: __main_.py  config.py
education_time_management/: __main__.py  config.py
education_time_management/api/: main_app.py  users_routes.py
education_time_management/app/: __main_.py  __main__.py  config.py
education_time_management/db/: base.py  db_config.py
education_time_management/users/: auth.py  database.py  manager.py  models.py  schema.py  utils.py
migrations/: env.py
migrations/versions/: 5cc2690b4f1e_initial.py  7d13fbb4cb33_database_creation.py  926f484e4f4e_initial.py  a1ed25ec8099_initial.py  d57e488a66ce_database_creation.py
requirements/: requirements_dev.txt
